@@ -1,3 +1,10 @@
+/**
+ * Mars Simulation Project
+ * TableRenderDemo.java
+ * @version 3.1.2 2020-09-02
+ * @author Manny Kung
+ */
+
 /*
  * Copyright (c) 1995, 2008, Oracle and/or its affiliates. All rights reserved.
  *
@@ -54,6 +61,7 @@ import java.awt.GridLayout;
  * explicitly initializes column sizes and it uses a combo box
  * as an editor for the Sport column.
  */
+@SuppressWarnings("serial")
 public class TableRenderDemo extends JPanel {
     private boolean DEBUG = false;
 
@@ -120,7 +128,7 @@ public class TableRenderDemo extends JPanel {
     public void setUpSportColumn(JTable table,
                                  TableColumn sportColumn) {
         //Set up the editor for the sport cells.
-        JComboBox comboBox = new JComboBox();
+        JComboBox<String> comboBox = new JComboBox<String>();
         comboBox.addItem("Snowboarding");
         comboBox.addItem("Rowing");
         comboBox.addItem("Knitting");
@@ -144,20 +152,20 @@ public class TableRenderDemo extends JPanel {
                                         "Vegetarian"};
         private Object[][] data = {
 	    {"Kathy", "Smith",
-	     "Snowboarding", new Integer(5), new Boolean(false)},
+	     "Snowboarding", Integer.valueOf(5), Boolean.FALSE},
 	    {"John", "Doe",
-	     "Rowing", new Integer(3), new Boolean(true)},
+	     "Rowing", Integer.valueOf(3), Boolean.TRUE},
 	    {"Sue", "Black",
-	     "Knitting", new Integer(2), new Boolean(false)},
+	     "Knitting", Integer.valueOf(2), Boolean.FALSE},
 	    {"Jane", "White",
-	     "Speed reading", new Integer(20), new Boolean(true)},
+	     "Speed reading", Integer.valueOf(20), Boolean.TRUE},
 	    {"Joe", "Brown",
-	     "Pool", new Integer(10), new Boolean(false)}
+	     "Pool", Integer.valueOf(10), Boolean.FALSE}
         };
 
         public final Object[] longValues = {"Jane", "Kathy",
                                             "None of the above",
-                                            new Integer(20), Boolean.TRUE};
+                                            Integer.valueOf(20), Boolean.TRUE};
 
         public int getColumnCount() {
             return columnNames.length;
